# getfreesol-app

./: .env.example  .fee_encryption_key  .gitignore  .replit  ASSETS_COMPLETE.md  Anchor.toml  BITGET_WALLET_SETUP.md  CLOUD_BUILD_GUIDE.md  LOCAL_BUILD_GUIDE.md  READY_FOR_LOCAL_BUILD.md  SOLANA_DAPP_STORE_SETUP.md  SOLANA_MOBILE_NEXT_STEPS.md  SOLANA_MOBILE_SETUP.md  START_HERE.md  X_POSTING_BUG_FIX.md  build.sh  burn assest.json  burn nft  colection burn.ts  colection.json  create_favicon.html  openapi.yaml  package-lock.json  package.json  replit.md  single burn.ts  skills-lock.json  tsconfig.json
.agents/: agent_assets_metadata.toml
.claude/: settings.local.json
attached_assets/: Anchor_1753758002376.toml  Pasted--About-Lend-Overview-of-Jupiter-Lend-and-its-features-The-Jupiter-Lend-API-is-built-on-top-1761785655624_1761785655625.txt  Pasted--Buy-and-Sell-API-Use-this-to-buy-and-sell-tokens-br-Su_1778352565428.txt  Pasted--CLIENT-SIDE-Trade-tsx--1760243439526_1760243439528.txt  Pasted--Earn-Beta-Overview-of-Jupiter-Lend-Earn-API-CardGroup-Card-title-deposit-href--1761786307173_1761786307173.txt  Pasted--Earn-Beta-Overview-of-Jupiter-Lend-Earn-API-Info-NOTE-Lite-URL-https--1761785977154_1761785977154.txt  (+67 more)
client/: index.html
migrations/: 0000_nostalgic_william_stryker.sql
programs/auto-claim/: Cargo.toml  DEPLOY_INSTRUCTIONS.md  PROGRAM_SPEC.md
programs/auto-claim/src/: errors.rs  lib.rs  state.rs
programs/auto-claim/src/instructions/: claim_empty_accounts.rs  initialize_config.rs  initialize_permit.rs  mod.rs  revoke_permit.rs  set_close_authority.rs
(+170 files in other folders)
