[package]
name = "auto-claim"
version = "0.1.0"
description = "Auto-claim program for reclaiming SOL from empty token accounts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "auto_claim"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"
